--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ antlr4-python3-runtime==4.7.2
 arrow==0.13.1
 astunparse==1.6.3
 attrs==18.2.0
-bak.tahoe==0.4
 bcrypt==3.1.6
 beautifulsoup4==4.8.1
 bencode.py==2.1.0
@@ -18,30 +17,15 @@ Click==7.0
 cloudpickle==1.2.2
 cycler==0.10.0
 Cython==0.29.14
-dask==2.16.0
-dask-glm==0.2.0
-dask-ml==1.1.1
 decorator==4.4.2
 distributed==2.6.0
 dnspython==1.16.0
 fastjsonschema==2.11
-Flask==1.1.2
-Flask-Bcrypt==0.7.1
-Flask-HTTPAuth==3.2.4
-Flask-JWT-Extended==3.17.0
-Flask-Migrate==2.4.0
-Flask-PyMongo==2.2.0
-Flask-RESTful==0.3.8
-Flask-SQLAlchemy==2.3.2
 fsspec==0.7.3
 furl==2.0.0
 future==0.17.1
 gast==0.3.3
 geoip2==2.9.0
-google-api-python-client==1.7.11
-google-auth==1.7.1
-google-auth-httplib2==0.0.3
-google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
 grpcio==1.29.0
 h5py==2.10.0
@@ -54,12 +38,9 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.14.0
 jsonschema==3.0.0
-Keras==2.4.2
-Keras-Preprocessing==1.1.2
 kiwisolver==1.1.0
 llvmlite==0.30.0
 locket==0.2.0
-lomond==0.3.3
 lxml==4.4.1
 Mako==1.0.7
 Markdown==3.2.2
@@ -67,8 +48,7 @@ MarkupSafe==1.1.0
 marshmallow==2.19.2
 matplotlib==3.1.1
 maxminddb==1.4.1
-medallion==0.3.1
-mondrianforest==0.0.2
+mongomock==3.19.0
 msgpack==0.6.2
 multipledispatch==0.6.0
 networkx==2.4
@@ -89,13 +69,11 @@ PyBrain==0.3
 pycparser==2.19
 pycryptodome==3.8.0
 PyJWT==1.7.1
-pymisp==2.4.103
 pymongo==3.8.0
 pyparsing==2.4.3
 pyperclip==1.7.0
 pyrsistent==0.14.11
 PySocks==1.6.8
-python-arango==5.2.1
 python-dateutil==2.8.0
 python-editor==1.0.4
 python-whois==0.7.2
@@ -111,6 +89,7 @@ scikit-learn==0.23.1
 scipy==1.4.1
 seaborn==0.9.0
 selenium==3.141.0
+sentinels==1.0.0
 simplejson==3.16.0
 six==1.12.0
 sklearn==0.0
@@ -120,8 +99,6 @@ SQLAlchemy==1.2.18
 tblib==1.5.0
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
-tensorflow-estimator==2.2.0
 termcolor==1.1.0
 threadpoolctl==2.0.0
 tldextract==2.2.2
